Added Y1 information to notebook guide

--- a/src/EjBonus/ej_bonus_europa.ipynb
+++ b/src/EjBonus/ej_bonus_europa.ipynb
@@ -3554,22 +3554,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Y1:  27407119066.282173\n",
+      "Y1:  [ -82664.43800389 -135956.99247706  -55318.57470326 -109650.86650589\n",
+      "  -87490.78749185 -123382.15088819 -121045.35932686  171659.0229914\n",
+      "  190508.93759232  -34394.97465063  -73239.15112714  -63494.07681872\n",
+      "  -96251.6409126   134924.01660785 -101641.79288895 -100958.96575206\n",
+      " -164420.17545945 -124994.16480218  157104.36316092  146394.09614675\n",
+      "  -74223.53969418 -117274.09916859 -146101.19232123  338938.76743118\n",
+      "  283743.17886451 -125290.70984484  437396.2944923    77124.97555034]\n",
       "Cargas de Y1: [ 9.99925260e-01 -1.22259664e-02  2.70756484e-06 -4.31861069e-07\n",
-      "  4.93639942e-07 -2.71135309e-07  7.34965897e-07]\n"
+      "  4.93639942e-07 -2.71135309e-07  7.34965897e-07]\n",
+      "Cargas de Y1: 0.9925309512428433 % de información\n"
      ]
     }
    ],
    "source": [
-    "print('Y1: ', pca_ns.explained_variance_[0])\n",
-    "print('Cargas de Y1:', pca_ns.components_[0])"
+    "print('Y1: ', pca_ns.fit_transform(X_non_standarized)[:,0])\n",
+    "print('Cargas de Y1:', pca_ns.components_[0])\n",
+    "print('Y1 aporta el ', pca_ns.explained_variance_ratio_[0], '% de información')"
    ]
   },
   {
@@ -3581,23 +3589,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Y1:  3.227165679111596\n",
+      "Y1:  [-1.06225512 -0.6688211   2.56285012  1.24726141 -0.16419646 -0.93797874\n",
+      "  2.44290749 -0.20676891 -0.58171902  0.98244396  1.37172691 -1.55518187\n",
+      " -1.77632183 -0.8378493   2.26450539  1.50252828 -3.41575532 -1.80689657\n",
+      " -2.06855257  1.44525321  0.51700619  0.76885732  0.06632628 -0.16081596\n",
+      " -0.86915616 -3.22245361  4.49773395 -0.33467796]\n",
       "Cargas de Y1:  [ 0.1248739  -0.50050586  0.40651815 -0.48287333  0.18811162 -0.47570355\n",
-      "  0.27165582]\n"
+      "  0.27165582]\n",
+      "Y1: aporta el  0.46102366844451415 % de información\n"
      ]
     }
    ],
    "source": [
-    "print('Y1: ', pca_s.explained_variance_[0])\n",
-    "print('Cargas de Y1: ', pca_s.components_[0])"
+    "print('Y1: ', pca_s.fit_transform(X_standarized)[:,0])\n",
+    "print('Cargas de Y1: ', pca_s.components_[0])\n",
+    "print('Y1 aporta el ', pca_s.explained_variance_ratio_[0], '% de información')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
